set(srcs
	"main.c"
	"disp/disp_drv.c"
	"disp/esp32_u8g2.c"
	"disp/epd/epaper.c"
	"disp/epd/epapaer_spi.c"
	"disp/epd/epd_2in66.c"
	"net_time/net_time.c"
	"u8g2/csrc/u8g2_setup.c"
	"u8g2/csrc/u8g2_d_setup.c"
	"u8g2/csrc/u8g2_ll_hvline.c"
	"u8g2/csrc/u8g2_d_setup.c"
	"u8g2/csrc/u8g2_d_memory.c"
	"u8g2/csrc/u8g2_intersection.c"
	"u8g2/csrc/u8g2_hvline.c"
	"u8g2/csrc/u8g2_font.c"
	"u8g2/csrc/u8g2_fonts.c"
	"u8g2/csrc/u8g2_buffer.c"
	"u8g2/csrc/u8x8_setup.c"
	"u8g2/csrc/u8x8_d_ssd1306_128x64_noname.c"
	"u8g2/csrc/u8x8_d_epd_2in66_296x152.c"
	"u8g2/csrc/u8x8_byte.c"
	"u8g2/csrc/u8x8_cad.c"
	"u8g2/csrc/u8x8_gpio.c"
	"u8g2/csrc/u8x8_display.c"
	"u8g2/csrc/u8x8_8x8.c")

idf_component_register(SRCS "${srcs}"
                    INCLUDE_DIRS "."
					"u8g2/csrc"
					"disp"
					"disp/epd"
					"net_time")
